# velosafe

./: .gitignore  .justfile  README.md  pyproject.toml
.github/workflows/: lint.yml
examples/: Modèle.ipynb  VIZ_VELO.ipynb  data_commune.ipynb  merger.ipynb
streamlit/: communes_with_bike_length_prepared_by_insee_com_prepared.csv  comparaison_ratio.csv  no_missing_values_data_viz_velo 2.csv  streamlit_app.py
streamlit/resources/: nb_accidents_velos2021_dep.csv  training_data.csv
velosafe/: __main__.py
velosafe/data/: __init__.py  accidents_preprocessing.py  bike_lane_processing.py  build_features.py  datasets.py  download.py  road_processing.py
velosafe/models/: __init__.py  serialize.py  train.py
