[tool.poetry]
name = "velosafe"
version = "0.1.0"
description = ""
authors = []
license = ""
readme = "README.md"
packages = [{include = "velosafe"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.0.209"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
ignore-init-module-imports = true
line-length = 120