[tool.poetry]
name = "velosafe"
version = "0.1.0"
description = ""
authors = []
license = ""
readme = "README.md"
packages = [{include = "velosafe"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.12.2"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
pyarrow = "^10.0.1"
fastparquet = "^2022.12.0"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
ruff = "^0.0.210"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
ignore-init-module-imports = true
line-length = 120